corrections sémentique et ajout style_mobile pour media queries

--- a/index.html
+++ b/index.html
@@ -10,18 +10,19 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Raleway&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style_mobile.css" media="screen and (max-width: 640px)">
 </head>
 
 <body>
-    <div id="main">
-        <header>
-            <img id="logo" src="images/logo/Reservia@3x.png" alt="logo bleu Reservia">
-            <nav class="liens">
-                <a href="#" id="button_01" class="buttons grey">Hébergements</a>
-                <a href="#" id="button_02" class="buttons grey">Activités</a>
-                <a href="#" id="button_03" class="buttons blue">S'inscrire</a>
-            </nav>
-        </header>
+    <header>
+        <img id="logo" src="images/logo/Reservia@3x.png" alt="logo bleu Reservia">
+        <nav class="liens">
+            <a href="#" id="button_01" class="buttons grey">Hébergements</a>
+            <a href="#" id="button_02" class="buttons grey">Activités</a>
+            <a href="#" id="button_03" class="buttons blue">S'inscrire</a>
+        </nav>
+    </header>
+    <main>
         <div class="headerTitle">
             <h1>Trouvez votre hébergement pour des vacances de rêve</h1>
             <h2>En plein centre ville ou pleine nature</h2>
@@ -38,7 +39,7 @@
                 <span>Filtres</span>
                 <ul>
                     <li><i class="fas fa-money-bill-wave"></i>
-                        <div class="text">&Eacute;conomique</div>
+                        <div class="text">Économique</div>
                     </li>
                     <li><i class="fas fa-child"></i>
                         <div class="text">Familial</div>
@@ -60,10 +61,14 @@
             <div class="host">
                 <h3>Hébergements à Marseille</h3>
                 <a href="#" class="box-content" itemscope itemtype="https://schema.org/Hotel">
-                    <img src="images/hebergements/4_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg" itemprop="image" alt="petite chambre avec un lit superposé">
+                    <img src="images/hebergements/4_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg" itemprop="image"
+                        alt="petite chambre avec un lit superposé">
                     <h4 itemprop="name">Auberge la Cannebière</h4>
                     <p itemprop="priceSpecification" itemscope itemtype="https://schema.org/UnitPriceSpecification">
-                    <meta itemprop="unitCode" content="NIGHT">Nuit à partir de <span itemprop="price">25<meta itemprop="priceCurrency" content="EUR">€</span></p>
+                        <meta itemprop="unitCode" content="NIGHT">Nuit à partir de <span itemprop="price">25
+                            <meta itemprop="priceCurrency" content="EUR">€
+                        </span>
+                    </p>
                     <div class="stars">
                         <i class="fas fa-star blue"></i>
                         <i class="fas fa-star blue"></i>
@@ -73,10 +78,14 @@
                     </div>
                 </a>
                 <a href="#" class="box-content" itemscope itemtype="https://schema.org/Hotel">
-                    <img src="images/hebergements/4_small/fred-kleber-gTbaxaVLvsg-unsplash.jpg" itemprop="image" alt="chambre d'hôtel aux murs gris avec 2 lits">
+                    <img src="images/hebergements/4_small/fred-kleber-gTbaxaVLvsg-unsplash.jpg" itemprop="image"
+                        alt="chambre d'hôtel aux murs gris avec 2 lits">
                     <h4 itemprop="name">Hôtel du port</h4>
                     <p itemprop="priceSpecification" itemscope itemtype="https://schema.org/UnitPriceSpecification">
-                    <meta itemprop="unitCode" content="NIGHT">Nuit à partir de <span itemprop="price">52<meta itemprop="priceCurrency" content="EUR">€</span></p>
+                        <meta itemprop="unitCode" content="NIGHT">Nuit à partir de <span itemprop="price">52
+                            <meta itemprop="priceCurrency" content="EUR">€
+                        </span>
+                    </p>
                     <div class="stars">
                         <i class="fas fa-star blue"></i>
                         <i class="fas fa-star blue"></i>
@@ -86,10 +95,14 @@
                     </div>
                 </a>
                 <a href="#" class="box-content" itemscope itemtype="https://schema.org/Hotel">
-                    <img src="images/hebergements/4_small/reisetopia-B8WIgxA_PFU-unsplash.jpg" itemprop="image" alt="chambre d'hotel avec une grande penderie et un lit ">
+                    <img src="images/hebergements/4_small/reisetopia-B8WIgxA_PFU-unsplash.jpg" itemprop="image"
+                        alt="chambre d'hotel avec une grande penderie et un lit ">
                     <h4 itemprop="name">Hôtel les mouettes</h4>
                     <p itemprop="priceSpecification" itemscope itemtype="https://schema.org/UnitPriceSpecification">
-                    <meta itemprop="unitCode" content="NIGHT"> Nuit à partir de <span itemprop="price">76<meta itemprop="priceCurrency" content="EUR">€</span></p>
+                        <meta itemprop="unitCode" content="NIGHT"> Nuit à partir de <span itemprop="price">76
+                            <meta itemprop="priceCurrency" content="EUR">€
+                        </span>
+                    </p>
                     <div class="stars">
                         <i class="fas fa-star blue"></i>
                         <i class="fas fa-star blue"></i>
@@ -99,10 +112,14 @@
                     </div>
                 </a>
                 <a href="#" class="box-content" itemscope itemtype="https://schema.org/Hotel">
-                    <img src="images/hebergements/4_small/annie-spratt-Eg1qcIitAuA-unsplash.jpg" itemprop="image" alt="chambre d'hôtel lumineuse avec un lit pour deux personne et un tableau de paysage maritime">
+                    <img src="images/hebergements/4_small/annie-spratt-Eg1qcIitAuA-unsplash.jpg" itemprop="image"
+                        alt="chambre d'hôtel lumineuse avec un lit pour deux personne et un tableau de paysage maritime">
                     <h4 itemprop="name">Hôtel de la mer</h4>
                     <p itemprop="priceSpecification" itemscope itemtype="https://schema.org/UnitPriceSpecification">
-                    <meta itemprop="unitCode" content="NIGHT">Nuit à partir de <span itemprop="price">46<meta itemprop="priceCurrency" content="EUR">€</span></p>
+                        <meta itemprop="unitCode" content="NIGHT">Nuit à partir de <span itemprop="price">46
+                            <meta itemprop="priceCurrency" content="EUR">€
+                        </span>
+                    </p>
                     <div class="stars">
                         <i class="fas fa-star blue"></i>
                         <i class="fas fa-star blue"></i>
@@ -112,10 +129,14 @@
                     </div>
                 </a>
                 <a href="#" class="box-content" itemscope itemtype="https://schema.org/Hotel">
-                    <img src="images/hebergements/4_small/nicate-lee-kT-ZyaiwBe0-unsplash.jpg" itemprop="image" alt="dortoir d'auberge avec plusieurs lit superposés en bois de palette">
+                    <img src="images/hebergements/4_small/nicate-lee-kT-ZyaiwBe0-unsplash.jpg" itemprop="image"
+                        alt="dortoir d'auberge avec plusieurs lit superposés en bois de palette">
                     <h4 itemprop="name">Auberge Le Panier</h4>
                     <p itemprop="priceSpecification" itemscope itemtype="https://schema.org/UnitPriceSpecification">
-                    <meta itemprop="unitCode" content="NIGHT">Nuit à partir de <span itemprop="price">23<meta itemprop="priceCurrency" content="EUR">€</span></p>
+                        <meta itemprop="unitCode" content="NIGHT">Nuit à partir de <span itemprop="price">23
+                            <meta itemprop="priceCurrency" content="EUR">€
+                        </span>
+                    </p>
                     <div class="stars">
                         <i class="fas fa-star blue"></i>
                         <i class="fas fa-star blue"></i>
@@ -125,10 +146,14 @@
                     </div>
                 </a>
                 <a href="#" class="box-content" itemscope itemtype="https://schema.org/Hotel">
-                    <img src="images/hebergements/4_small/febrian-zakaria-M6S1WvfW68A-unsplash.jpg" itemprop="image" alt="petite chambre d'hôtel lumineuse avec un lit, un bureau et une télévision">
+                    <img src="images/hebergements/4_small/febrian-zakaria-M6S1WvfW68A-unsplash.jpg" itemprop="image"
+                        alt="petite chambre d'hôtel lumineuse avec un lit, un bureau et une télévision">
                     <h4 itemprop="name">Hôtel chez Amina</h4>
                     <p itemprop="priceSpecification" itemscope itemtype="https://schema.org/UnitPriceSpecification">
-                    <meta itemprop="unitCode" content="NIGHT">Nuit à partir de <span itemprop="price">96<meta itemprop="priceCurrency" content="EUR">€</span></p>
+                        <meta itemprop="unitCode" content="NIGHT">Nuit à partir de <span itemprop="price">96
+                            <meta itemprop="priceCurrency" content="EUR">€
+                        </span>
+                    </p>
                     <div class="stars">
                         <i class="fas fa-star blue"></i>
                         <i class="fas fa-star blue"></i>
@@ -145,11 +170,15 @@
                     <i class="fas fa-chart-line"></i>
                 </h3>
                 <a href="#" class="box-content" itemscope itemtype="https://schema.org/Hotel">
-                    <img src="images/hebergements/4_small/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg" itemprop="image" alt="chambre d'hôtel luxueuse aux mur vert pomme avec un grand lit et de grands miroirs sur le mur et au plafond">
+                    <img src="images/hebergements/4_small/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg" itemprop="image"
+                        alt="chambre d'hôtel luxueuse aux mur vert pomme avec un grand lit et de grands miroirs sur le mur et au plafond">
                     <div class="details">
                         <h4 itemprop="name">Hôtel Le soleil du matin</h4>
                         <p itemprop="priceSpecification" itemscope itemtype="https://schema.org/UnitPriceSpecification">
-                        <meta itemprop="unitCode" content="NIGHT">Nuit à partir de <span itemprop="price">128<meta itemprop="priceCurrency" content="EUR">€</span></p>
+                            <meta itemprop="unitCode" content="NIGHT">Nuit à partir de <span itemprop="price">128
+                                <meta itemprop="priceCurrency" content="EUR">€
+                            </span>
+                        </p>
                         <div class="stars">
                             <i class="fas fa-star blue"></i>
                             <i class="fas fa-star blue"></i>
@@ -160,11 +189,15 @@
                     </div>
                 </a>
                 <a href="#" class="box-content" itemscope itemtype="https://schema.org/Hotel">
-                    <img src="images/hebergements/4_small/aw-creative-VGs8z60yT2c-unsplash.jpg" itemprop="image" alt="grande chambre d'hôtel moderne et contemporaine">
+                    <img src="images/hebergements/4_small/aw-creative-VGs8z60yT2c-unsplash.jpg" itemprop="image"
+                        alt="grande chambre d'hôtel moderne et contemporaine">
                     <div class="details">
                         <h4 itemprop="name">Au coeur de l'eau Chambres d'hôtes</h4>
                         <p itemprop="priceSpecification" itemscope itemtype="https://schema.org/UnitPriceSpecification">
-                        <meta itemprop="unitCode" content="NIGHT">Nuit à partir de <span itemprop="price">71<meta itemprop="priceCurrency" content="EUR">€</span></p>
+                            <meta itemprop="unitCode" content="NIGHT">Nuit à partir de <span itemprop="price">71
+                                <meta itemprop="priceCurrency" content="EUR">€
+                            </span>
+                        </p>
                         <div class="stars">
                             <i class="fas fa-star blue"></i>
                             <i class="fas fa-star blue"></i>
@@ -175,11 +208,15 @@
                     </div>
                 </a>
                 <a href="#" class="box-content" itemscope itemtype="https://schema.org/Hotel">
-                    <img src="images/hebergements/4_small/febrian-zakaria-sjvU0THccQA-unsplash.jpg" itemprop="image" alt="chambre d'hôtel avec un grand lit au centre">
+                    <img src="images/hebergements/4_small/febrian-zakaria-sjvU0THccQA-unsplash.jpg" itemprop="image"
+                        alt="chambre d'hôtel avec un grand lit au centre">
                     <div class="details">
                         <h4 itemprop="name">Hôtel Tout bleu et blanc</h4>
                         <p itemprop="priceSpecification" itemscope itemtype="https://schema.org/UnitPriceSpecification">
-                        <meta itemprop="unitCode" content="NIGHT">Nuit à partir de <span itemprop="price">68<meta itemprop="priceCurrency" content="EUR">€</span></p>
+                            <meta itemprop="unitCode" content="NIGHT">Nuit à partir de <span itemprop="price">68
+                                <meta itemprop="priceCurrency" content="EUR">€
+                            </span>
+                        </p>
                         <div class="stars">
                             <i class="fas fa-star blue"></i>
                             <i class="fas fa-star blue"></i>
@@ -194,42 +231,51 @@
         <section>
             <h3>Activités à Marseille</h3>
             <div class="activities" itemtype="https://schema.org/TouristDestination" itemscope>
-                <meta itemprop="audienceType" content="Cultural tourism"/>
+                <meta itemprop="audienceType" content="Cultural tourism" />
                 <div id="activitiescolumn1" itemtype="https://schema.org/TouristDestination" itemscope>
                     <figure class="activitiesbox" id="activitiesbox1">
-                        <img src="images/activites/3_medium/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg" alt="un port remplis de bateaux avec un ville en arrière plan" itemprop="image">
+                        <img src="images/activites/3_medium/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg"
+                            alt="un port remplis de bateaux avec un ville en arrière plan" itemprop="image">
                         <figcaption class="name" itemprop="name">Vieux Port</figcaption>
                     </figure>
                 </div>
                 <div id="activitiescolumn2" itemtype="https://schema.org/TouristDestination" itemscope>
                     <figure class="activitiesbox" id="activitiesbox2">
-                        <img src="images/activites/4_small/paul-hermann-QFTrLdQIRhI-unsplash.jpg" alt="une pente rocheuse beige avec un fort beige au sommet" itemprop="image">
+                        <img src="images/activites/4_small/paul-hermann-QFTrLdQIRhI-unsplash.jpg"
+                            alt="une pente rocheuse beige avec un fort beige au sommet" itemprop="image">
                         <figcaption class="name" itemprop="name">Fort de Pomègues</figcaption>
                     </figure>
                     <figure class="activitiesbox" id="activitiesbox3">
-                        <img src="images/activites/4_small/kevin-hikari-rV_Qd1l-VXg-unsplash.jpg" alt="un paysage maritime avec au premier plan, une longue vue, au second plan la mer traversée par une longue digue orange, ainsi qu'une île rocailleuse en arrière plan" itemprop="image">
+                        <img src="images/activites/4_small/kevin-hikari-rV_Qd1l-VXg-unsplash.jpg"
+                            alt="un paysage maritime avec au premier plan, une longue vue, au second plan la mer traversée par une longue digue orange, ainsi qu'une île rocailleuse en arrière plan"
+                            itemprop="image">
                         <figcaption class="name" itemprop="name">Iles du Frioul</figcaption>
                     </figure>
                 </div>
                 <div id="activitiesscolumn3" itemtype="https://schema.org/TouristDestination" itemscope>
                     <figure class="activitiesbox" id="activitiesbox4">
-                        <img src="images/activites/3_medium/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg" alt="des montagnes rocheuses pleines de verdure avec la mer en arrière plan" itemprop="image">
+                        <img src="images/activites/3_medium/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg"
+                            alt="des montagnes rocheuses pleines de verdure avec la mer en arrière plan"
+                            itemprop="image">
                         <figcaption class="name" itemprop="name">Parc National des Calanques</figcaption>
                     </figure>
                 </div>
                 <div id="activitiescolumn4" itemtype="https://schema.org/TouristDestination" itemscope>
                     <figure class="activitiesbox" id="activitiesbox5">
-                        <img src="images/activites/4_small/florian-wehde-xW9e8gdotxI-unsplash.jpg" alt="une ville sans gratte-ciel avec une colline rocailleuse en arrière plan, surplombée par une église" itemprop="image">
+                        <img src="images/activites/4_small/florian-wehde-xW9e8gdotxI-unsplash.jpg"
+                            alt="une ville sans gratte-ciel avec une colline rocailleuse en arrière plan, surplombée par une église"
+                            itemprop="image">
                         <figcaption class="name" itemprop="name">Notre-Dame-de-la-Garde</figcaption>
                     </figure>
                     <figure class="activitiesbox" id="activitiesbox6">
-                        <img src="images/activites/4_small/lena-paulin-wH2-EJoDcV0-unsplash.jpg" alt="un majestueux palais blanc avec une imposante fontaine au centre" itemprop="image">
+                        <img src="images/activites/4_small/lena-paulin-wH2-EJoDcV0-unsplash.jpg"
+                            alt="un majestueux palais blanc avec une imposante fontaine au centre" itemprop="image">
                         <figcaption class="name" itemprop="name">Parc Longchamp</figcaption>
                     </figure>
                 </div>
             </div>
         </section>
-    </div>
+    </main>
     <footer>
         <div id="info">
             <h5>A propos</h5>
