modifications sémentique: ajout sections

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Raleway&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="style_mobile.css" media="screen and (max-width: 640px)">
+    <link rel="stylesheet" href="style_mobile.css" media="screen only and (max-width: 640px)">
 </head>
 
 <body>
@@ -58,7 +58,7 @@
             </div>
         </div>
         <div class="content">
-            <div class="host">
+            <section class="host">
                 <h3>Hébergements à Marseille</h3>
                 <a href="#" class="box-content" itemscope itemtype="https://schema.org/Hotel">
                     <img src="images/hebergements/4_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg" itemprop="image"
@@ -163,8 +163,8 @@
                     </div>
                 </a>
                 <button type="button">Afficher plus</button>
-            </div>
-            <div class="popular">
+            </section>
+            <section class="popular">
                 <h3 class="title">
                     Les plus populaires
                     <i class="fas fa-chart-line"></i>
@@ -226,9 +226,9 @@
                         </div>
                     </div>
                 </a>
-            </div>
+            </section>
         </div>
-        <section>
+        <section id="activities">
             <h3>Activités à Marseille</h3>
             <div class="activities" itemtype="https://schema.org/TouristDestination" itemscope>
                 <meta itemprop="audienceType" content="Cultural tourism" />
