--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     <script src="https://kit.fontawesome.com/60b308914c.js" crossorigin="anonymous"></script>
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Raleway&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="style_mobile.css" media="screen only and (max-width: 640px)">
+    <link rel="stylesheet" href="style.css" media="screen and (min-width: 376px)">
+    <link rel="stylesheet" href="style_mobile.css" media="screen and (max-width: 375px)">
 </head>
 
 <body>
