ajout div id nav dans le nav du header, pas sur que ce soit la solution

--- a/index.html
+++ b/index.html
@@ -3,8 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <meta name="Description"
-        content="Trouvez votre hébergement pour des vacances de rêve, en plein centre ville ou pleine nature">
+    <meta name="Description" content="Trouvez votre hébergement pour des vacances de rêve, en plein centre ville ou pleine nature">
     <title>Hébergement pour vos vacances - Reservia</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <script src="https://kit.fontawesome.com/60b308914c.js" crossorigin="anonymous"></script>
@@ -17,11 +16,13 @@
 <body>
     <header>
         <img id="logo" src="images/logo/Reservia@3x.png" alt="logo bleu Reservia">
-        <a href="#" id="button_03" class="buttons blue">S'inscrire</a>
-        <nav class="liens">
-            <a href="#" id="button_01" class="buttons grey">Hébergements</a>
-            <a href="#" id="button_02" class="buttons grey">Activités</a>
-        </nav>
+        <div id="nav">
+            <a href="#" id="button_03" class="buttons blue">S'inscrire</a>
+            <nav class="liens">
+                <a href="#" id="button_01" class="buttons grey">Hébergements</a>
+                <a href="#" id="button_02" class="buttons grey">Activités</a>
+            </nav>
+        </div>
     </header>
     <main>
         <div class="headerTitle">
