--- a/index.html
+++ b/index.html
@@ -11,18 +11,17 @@
     <link href="https://fonts.googleapis.com/css2?family=Raleway&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="style_mobile_2.css" media="screen and (max-width: 767px)">
+    <link rel="stylesheet" href="style_mobile_2.css" media="screen and (max-width: 1024px)">
 </head>
 
 <body>
     <header>
         <img id="logo" src="images/logo/Reservia@3x.png" alt="logo bleu Reservia">
-        <div id="nav">
-            <a href="#" id="button_03" class="buttons blue">S'inscrire</a>
-            <nav class="liens">
-                <a href="#" id="button_01" class="buttons grey">Hébergements</a>
-                <a href="#" id="button_02" class="buttons grey">Activités</a>
-            </nav>
-        </div>
+        <a href="#" id="button_03" class="buttons blue">S'inscrire</a>
+        <nav class="liens">
+            <a href="#" id="button_01" class="buttons grey">Hébergements</a>
+            <a href="#" id="button_02" class="buttons grey">Activités</a>
+        </nav>
     </header>
     <main>
         <div class="headerTitle">
