--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Raleway&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="style_mobile_2.css" media="screen and (max-width: 767px)">
-    <link rel="stylesheet" href="style_mobile_2.css" media="screen and (max-width: 1024px)">
+    <link rel="stylesheet" href="style_tablette.css" media="only screen and (max-width: 1024px)">
+    <link rel="stylesheet" href="style_mobile.css" media="only screen and (max-width: 767px)">
 </head>
 
 <body>
