correction activitiescolumn3 un s en trop qui mettait le bazard

--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@
                         <figcaption class="name" itemprop="name">Iles du Frioul</figcaption>
                     </figure>
                 </div>
-                <div id="activitiesscolumn3" itemtype="https://schema.org/TouristDestination" itemscope>
+                <div id="activitiescolumn3" itemtype="https://schema.org/TouristDestination" itemscope>
                     <figure class="activitiesbox" id="activitiesbox4">
                         <img src="images/activites/3_medium/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg"
                             alt="des montagnes rocheuses pleines de verdure avec la mer en arrière plan"
