ajout balise <a> sur les activities

--- a/index.html
+++ b/index.html
@@ -484,102 +484,132 @@
                         itemtype="https://schema.org/TouristDestination"
                         itemscope
                     >
-                        <figure
-                            class="activitiesbox"
-                            id="activitiesbox1"
-                        >
-                            <img
-                                src="images/activites/3_medium/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg"
-                                alt="un port remplis de bateaux avec un ville en arrière plan"
-                                itemprop="image"
-                            />
-                            <figcaption class="name" itemprop="name">
-                                Vieux Port
-                            </figcaption>
-                        </figure>
+                        <a href="#">
+                            <figure
+                                class="activitiesbox"
+                                id="activitiesbox1"
+                            >
+                                <img
+                                    src="images/activites/3_medium/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg"
+                                    alt="un port remplis de bateaux avec un ville en arrière plan"
+                                    itemprop="image"
+                                />
+                                <figcaption
+                                    class="name"
+                                    itemprop="name"
+                                >
+                                    Vieux Port
+                                </figcaption>
+                            </figure>
+                        </a>
                     </div>
                     <div
                         id="activitiescolumn2"
                         itemtype="https://schema.org/TouristDestination"
                         itemscope
                     >
-                        <figure
-                            class="activitiesbox"
-                            id="activitiesbox2"
-                        >
-                            <img
-                                src="images/activites/4_small/paul-hermann-QFTrLdQIRhI-unsplash.jpg"
-                                alt="une pente rocheuse beige avec un fort beige au sommet"
-                                itemprop="image"
-                            />
-                            <figcaption class="name" itemprop="name">
-                                Fort de Pomègues
-                            </figcaption>
-                        </figure>
-                        <figure
-                            class="activitiesbox"
-                            id="activitiesbox3"
-                        >
-                            <img
-                                src="images/activites/4_small/kevin-hikari-rV_Qd1l-VXg-unsplash.jpg"
-                                alt="un paysage maritime avec au premier plan, une longue vue, au second plan la mer traversée par une longue digue orange, ainsi qu'une île rocailleuse en arrière plan"
-                                itemprop="image"
-                            />
-                            <figcaption class="name" itemprop="name">
-                                Iles du Frioul
-                            </figcaption>
-                        </figure>
+                        <a href="#">
+                            <figure
+                                class="activitiesbox"
+                                id="activitiesbox2"
+                            >
+                                <img
+                                    src="images/activites/4_small/paul-hermann-QFTrLdQIRhI-unsplash.jpg"
+                                    alt="une pente rocheuse beige avec un fort beige au sommet"
+                                    itemprop="image"
+                                />
+                                <figcaption
+                                    class="name"
+                                    itemprop="name"
+                                >
+                                    Fort de Pomègues
+                                </figcaption>
+                            </figure>
+                        </a>
+                        <a href="#">
+                            <figure
+                                class="activitiesbox"
+                                id="activitiesbox3"
+                            >
+                                <img
+                                    src="images/activites/4_small/kevin-hikari-rV_Qd1l-VXg-unsplash.jpg"
+                                    alt="un paysage maritime avec au premier plan, une longue vue, au second plan la mer traversée par une longue digue orange, ainsi qu'une île rocailleuse en arrière plan"
+                                    itemprop="image"
+                                />
+                                <figcaption
+                                    class="name"
+                                    itemprop="name"
+                                >
+                                    Iles du Frioul
+                                </figcaption>
+                            </figure>
+                        </a>
                     </div>
                     <div
                         id="activitiescolumn3"
                         itemtype="https://schema.org/TouristDestination"
                         itemscope
                     >
-                        <figure
-                            class="activitiesbox"
-                            id="activitiesbox4"
-                        >
-                            <img
-                                src="images/activites/3_medium/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg"
-                                alt="des montagnes rocheuses pleines de verdure avec la mer en arrière plan"
-                                itemprop="image"
-                            />
-                            <figcaption class="name" itemprop="name">
-                                Parc National des Calanques
-                            </figcaption>
-                        </figure>
+                        <a href="#">
+                            <figure
+                                class="activitiesbox"
+                                id="activitiesbox4"
+                            >
+                                <img
+                                    src="images/activites/3_medium/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg"
+                                    alt="des montagnes rocheuses pleines de verdure avec la mer en arrière plan"
+                                    itemprop="image"
+                                />
+                                <figcaption
+                                    class="name"
+                                    itemprop="name"
+                                >
+                                    Parc National des Calanques
+                                </figcaption>
+                            </figure>
+                        </a>
                     </div>
                     <div
                         id="activitiescolumn4"
                         itemtype="https://schema.org/TouristDestination"
                         itemscope
                     >
-                        <figure
-                            class="activitiesbox"
-                            id="activitiesbox5"
-                        >
-                            <img
-                                src="images/activites/4_small/florian-wehde-xW9e8gdotxI-unsplash.jpg"
-                                alt="une ville sans gratte-ciel avec une colline rocailleuse en arrière plan, surplombée par une église"
-                                itemprop="image"
-                            />
-                            <figcaption class="name" itemprop="name">
-                                Notre-Dame-de-la-Garde
-                            </figcaption>
-                        </figure>
-                        <figure
-                            class="activitiesbox"
-                            id="activitiesbox6"
-                        >
-                            <img
-                                src="images/activites/4_small/lena-paulin-wH2-EJoDcV0-unsplash.jpg"
-                                alt="un majestueux palais blanc avec une imposante fontaine au centre"
-                                itemprop="image"
-                            />
-                            <figcaption class="name" itemprop="name">
-                                Parc Longchamp
-                            </figcaption>
-                        </figure>
+                        <a href="#">
+                            <figure
+                                class="activitiesbox"
+                                id="activitiesbox5"
+                            >
+                                <img
+                                    src="images/activites/4_small/florian-wehde-xW9e8gdotxI-unsplash.jpg"
+                                    alt="une ville sans gratte-ciel avec une colline rocailleuse en arrière plan, surplombée par une église"
+                                    itemprop="image"
+                                />
+                                <figcaption
+                                    class="name"
+                                    itemprop="name"
+                                >
+                                    Notre-Dame-de-la-Garde
+                                </figcaption>
+                            </figure>
+                        </a>
+                        <a href="#">
+                            <figure
+                                class="activitiesbox"
+                                id="activitiesbox6"
+                            >
+                                <img
+                                    src="images/activites/4_small/lena-paulin-wH2-EJoDcV0-unsplash.jpg"
+                                    alt="un majestueux palais blanc avec une imposante fontaine au centre"
+                                    itemprop="image"
+                                />
+                                <figcaption
+                                    class="name"
+                                    itemprop="name"
+                                >
+                                    Parc Longchamp
+                                </figcaption>
+                            </figure>
+                        </a>
                     </div>
                 </div>
             </section>
